# db/schema.rb
@@ -9,7 +9,8 @@
 # migrations use external dependencies or application code.
 #
 # It's strongly recommended that you check this file into your version control system.
-ActiveRecord::Schema[7.0].define(version: 2022_09_02_031158) do
+
+ActiveRecord::Schema[7.0].define(version: 2022_09_05_205726) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
 
@@ -66,6 +67,7 @@ ActiveRecord::Schema[7.0].define(version: 2022_09_02_031158) do
     t.integer "productivity", default: 0
     t.integer "speed", default: 0
     t.datetime "deleted_at", precision: nil
+    t.date "manager_started_date"
     t.index ["account_status_id"], name: "index_accounts_on_account_status_id"
     t.index ["manager_id"], name: "index_accounts_on_manager_id"
   end
@@ -193,8 +195,20 @@ ActiveRecord::Schema[7.0].define(version: 2022_09_02_031158) do
     t.text "mitigation_strategy"
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
+    t.integer "alert_status"
     t.index ["account_id"], name: "index_metric_follow_ups_on_account_id"
     t.index ["manager_id"], name: "index_metric_follow_ups_on_manager_id"
+  end
+
+  create_table "metric_histories", force: :cascade do |t|
+    t.bigint "metric_follow_ups_id", null: false
+    t.date "date", null: false
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+    t.text "mitigation_strategy"
+    t.integer "alert_status"
+    t.integer "manager_id"
+    t.index ["metric_follow_ups_id"], name: "index_metric_histories_on_metric_follow_ups_id"
   end
 
   create_table "metric_limits", force: :cascade do |t|
@@ -211,7 +225,7 @@ ActiveRecord::Schema[7.0].define(version: 2022_09_02_031158) do
   end
 
   create_table "metrics", force: :cascade do |t|
-    t.text "metrics", null: false
+    t.integer "value", null: false
     t.string "indicator_type", null: false
     t.date "date", null: false
     t.datetime "created_at", null: false
@@ -389,6 +403,7 @@ ActiveRecord::Schema[7.0].define(version: 2022_09_02_031158) do
   add_foreign_key "investments", "teams"
   add_foreign_key "metric_follow_ups", "accounts"
   add_foreign_key "metric_follow_ups", "collaborators", column: "manager_id"
+  add_foreign_key "metric_histories", "metric_follow_ups", column: "metric_follow_ups_id"
   add_foreign_key "payments", "accounts"
   add_foreign_key "posts", "collaborators"
   add_foreign_key "posts", "projects"
