# swagger/v1/swagger.yaml
@@ -4,6 +4,17 @@ info:
   title: Clients API V1
   version: v1
 paths:
+  "/api/v1/managers/{manager_id}/accounts":
+    get:
+      summary: Get all accounts of a mannager and with priorities
+      tags:
+      - Managers
+      security:
+      - Bearer: []
+      parameters:
+      - name: manager_id
+        in: path
+        description: id of the manager
   "/api/v1/accounts/{account_id}/invitations":
     post:
       summary: Invite account contacts throght email
@@ -149,6 +160,99 @@ components:
       - build_id
       - build_date
       - build_branch
+    manager_accounts:
+      type: object
+      properties:
+        manager_accounts:
+          type: object
+          properties:
+            id:
+              type: integer
+            name:
+              type: string
+            location:
+              type: string
+            last_follow_up_text:
+              type: string
+            priority:
+              type: string
+            role_debt:
+              type: integer
+            alert:
+              type: boolean
+            team_balance:
+              type: object
+              properties:
+                amount:
+                  type: object
+                  properties:
+                    value:
+                      type: integer
+                    alert:
+                      type: boolean
+                alert:
+                  type: boolean
+            client_management:
+              type: object
+              properties:
+                amount:
+                  type: object
+                  properties:
+                    value:
+                      type: integer
+                    alert:
+                      type: boolean
+                alert:
+                  type: boolean
+            performance:
+              type: object
+              properties:
+                amount:
+                  type: object
+                  properties:
+                    value:
+                      type: integer
+                    alert:
+                      type: boolean
+                alert:
+                  type: boolean
+            gross_margin:
+              type: object
+              properties:
+                amount:
+                  type: object
+                  properties:
+                    value:
+                      type: integer
+                    alert:
+                      type: boolean
+                alert:
+                  type: boolean
+            morale:
+              type: object
+              properties:
+                amount:
+                  type: object
+                  properties:
+                    value:
+                      type: integer
+                    alert:
+                      type: boolean
+                alert:
+                  type: boolean
+          required:
+          - id
+          - name
+          - location
+          - last_follow_up_text
+          - priority
+          - role_debt
+          - alert
+          - team_balance
+          - client_management
+          - performance
+          - gross_margin
+          - morale
     metric:
       type: object
       properties:
